--- a/actRath.html
+++ b/actRath.html
@@ -306,7 +306,16 @@
 						<p class="card-text"><a href="tel:+353879367474" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 936 7474</p>
 					</div>
 				</div>
-				<div class="card border-0">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Sinead O'Loughlin, Yoga to Nourish &#38; Heal</b></p>
+						<p class="card-text"><i>Ballinaclash Community Hall, The Old School, Ballinacarrig Lower, Rathdrum, Co. Wicklow, A67 HY24</i></p>
+						<p class="card-text"><a href="tel:+353872507802" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 250 7802</p>
+						<p class="card-text"><a href="mailto:sineadol@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: sineadol@gmail.com</p>
+						<a href="https://www.sineadoloughlinhealth.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/theholisticphysio.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/theholisticphysio.ie/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
 				</div>
       </div>  <!-- End card deck x 3 -->
 		</div>  <!-- End Section -->
