--- a/newsRath.html
+++ b/newsRath.html
@@ -111,17 +111,6 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<p class="card-text"><b>Culture Night</b></p>
-							<p class="card-text">19 September 2025</p>
-							<p class="card-text"><a href="mailto:info@culturenight.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@culturenight.ie</p>
-							<a href="https://culturenight.ie/events/?_sf_s=rathdrum&_sft_location=rathdrum" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;		  
-							<a href="https://www.facebook.com/culturenight/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-							<a href="https://www.instagram.com/CultureNight/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-							<a href="https://x.com/CultureNight" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						</div>
-					</div>
-					<div class="card bg-dark text-white">
-						<div class="card-body">
 							<img class="card-img-top" src="images/2025_greenan.jpg" alt="Greenan">
 							<p class="card-text"><b>Inhand Forum</b></p>				
 							<p class="card-text">19 - 20 September 2025</p>						
@@ -141,9 +130,6 @@
 							<a href="https://www.facebook.com/AvondaleGAA/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-				</div>        <!-- End card deck x 3 --> 
-					
-				<div class="card-deck" style="padding: 0.5rem;">		
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_GAA_02.jpg" alt="GAA_01">					
@@ -151,6 +137,9 @@
 						  <a href="https://www.facebook.com/AvondaleGAA/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>				
+				</div>        <!-- End card deck x 3 --> 
+					
+				<div class="card-deck" style="padding: 0.5rem;">		
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_bungee.jpg" alt="bungee">					
@@ -172,9 +161,6 @@
 							<a href="https://www.facebook.com/rathdrumchristmaslight" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-				</div>        <!-- End card deck x 3 -->  
-			
-				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_craft.jpg" alt="BallinacorCraft">
@@ -187,6 +173,9 @@
 							<a href="https://www.instagram.com/ballinacorcommunity/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->  
+			
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_coffee.jpg" alt="coffee">
@@ -205,18 +194,17 @@
 							<a href="https://www.facebook.com/profile.php?id=100057628351851" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-
-				</div>        <!-- End card deck x 3 -->  
-
-				<div class="card-deck" style="padding: 0.5rem;">
-					<div class="card bg-dark text-white">					
+					<div class="card bg-dark text-white">	
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_samarathans.jpg" alt="samaritans">
 							<p class="card-text"><b>Hand of Friendship Walk</b></p>
 							<p class="card-text">Sunday 28 September 2025 at noon</p>
 							<p class="card-text"><a href="mailto:adminireland@samaritans.org" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: adminireland@samaritans.org</p>
 						</div>
-					</div>
+					</div>	
+				</div>        <!-- End card deck x 3 -->  
+
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_parishwalk.jpg" alt="ParishWalk">
@@ -227,7 +215,18 @@
 							<a href="http://rathdrumparish.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.facebook.com/rathdrumparish.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
-					</div>				
+					</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<img class="card-img-top" src="images/2025_camogie.jpg" alt="camogie">
+						<p class="card-text"><b>Intermediate Camogie Championship Semi-Final Aughrim v Avondale</b></p>
+						<p class="card-text">Sunday 28 September 2025 at 5pm</p>
+						<p class="card-text">Pearse's Park, Vale Rd, Yardland, Arklow, Co. Wicklow, Y14 E425</p>
+						<a href="https://www.universe.com/events/wicklow-camogie-intermediate-championship-semi-finals-tickets-9QXS7R?fbclid=IwY2xjawNFPkVleHRuA2FlbQIxMAABHlYtLOfOqZO-56GljP3eOwTbomU9qrkm6_QDzu9E9xK7tWoJRpS4EMvRlUEj_aem_af4YYqBGu1-3_AMsAQWszw" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tickets
+						<p class="card-text"><a href="mailto:secretary.avondale.wicklow@gaa.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: secretary.avondale.wicklow@gaa.ie</p>
+						<a href="https://www.facebook.com/avondalecamogieclub" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>
+					</div>
+				</div>					
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_alzheimer.jpg" alt="alzheimer">			
