--- a/dirRath.html
+++ b/dirRath.html
@@ -534,7 +534,18 @@
 				</div>
       </div>  <!-- End card deck x 3   -->
 	  	
-			<div class="card-deck" style="padding: 0.5rem;">	  
+			<div class="card-deck" style="padding: 0.5rem;">	 
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Sinead O'Loughlin, Physiotherapy &#38; Holistic Health</b></p>
+						<p class="card-text">Holly Cottage, Ballyeustace, Ballinaclash, Co. Wicklow, A67 WF88</p>
+						<p class="card-text"><a href="tel:+353872507802" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 250 7802</p>
+						<p class="card-text"><a href="mailto:sineadol@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: sineadol@gmail.com</p>
+						<a href="https://www.sineadoloughlinhealth.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/theholisticphysio.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/theholisticphysio.ie/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>			
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Sunbeam House Services</b></p>
@@ -552,8 +563,6 @@
 						<p class="card-text"><a href="tel:+35312115048" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 01 211 5048</p>
 						<a href="https://www2.hse.ie/services/find-urgent-emergency-care/st-columcilles-injury-unit-loughlinstown/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 			</div>  <!-- End card deck x 3 -->  
     </div>  <!-- End Section medical -->
