--- a/dirRath.html
+++ b/dirRath.html
@@ -780,11 +780,12 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Image Hair Salon</b><br><i>(Unisex)</i></p>
-						<p class="card-text">16 Main Street, Rathdrum, Co. Wicklow, A67 N289</p>
-						<p class="card-text"><a href="tel:+353040443844" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43844</p>
-						<a href="https://www.facebook.com/p/Image-hair-salon-100083275325978/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<!-- <a href="https://www.instagram.com/image_hair_salon_rathdrum/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a> -->
+						<p class="card-text"><b>Naura Hair &#38; Beauty</b></p>
+						<p class="card-text">Saville House, Corballis Upper, Rathdrum, Co. Wicklow, A67 HE98</p>
+						<p class="card-text"><a href="tel:+353851628547" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 085 162 8547</p>
+						<a href="https://booksy.com/en-ie/instant-experiences/widget/7782?instant_experiences_enabled=true&ig_ix=true&is_fb=1&fbclid=IwY2xjawGqq6JleHRuA2FlbQIxMAABHbEUwUk2774qFxFp4q2H2uzw77dmpRX2CH0B3omnjXDRI-IEkXWXKwB4IA_aem_tDmGUZikeSVC6P_4_OTiVA" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/naurasalonirl" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/naurasalonirl/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
@@ -800,16 +801,6 @@
       </div>  <!-- End card deck x 3 -->
 	  
 			<div class="card-deck" style="padding: 0.5rem;">
-		  	<div class="card bg-dark text-white">
-					<div class="card-body">
-						<p class="card-text"><b>Naura Hair &#38; Beauty</b></p>
-						<p class="card-text">Saville House, Corballis Upper, Rathdrum, Co. Wicklow, A67 HE98</p>
-						<p class="card-text"><a href="tel:+353851628547" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 085 162 8547</p>
-						<a href="https://booksy.com/en-ie/instant-experiences/widget/7782?instant_experiences_enabled=true&ig_ix=true&is_fb=1&fbclid=IwY2xjawGqq6JleHRuA2FlbQIxMAABHbEUwUk2774qFxFp4q2H2uzw77dmpRX2CH0B3omnjXDRI-IEkXWXKwB4IA_aem_tDmGUZikeSVC6P_4_OTiVA" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/naurasalonirl" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.instagram.com/naurasalonirl/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
-					</div>
-				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Barber 13</b><br><i>(Vape 13)</i></p>
@@ -828,10 +819,6 @@
 						<a href="https://www.instagram.com/kingstown_turkishbarber" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-
-			</div>  <!-- End card deck x 3 -->
-	  
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Brows 2 You</b></p>
@@ -841,6 +828,10 @@
 						<a href="https://www.instagram.com/brows2yourathdrum/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
+			</div>  <!-- End card deck x 3 -->
+	  
+			<div class="card-deck" style="padding: 0.5rem;">
+
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Nails by Rebecca</b></p>
@@ -860,6 +851,8 @@
 						<a href="https://www.facebook.com/dsenhanced.aesthetic" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/dsenhancedaesthetic/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
+				</div>
+				<div class="card border-0">
 				</div>
 			</div>  <!-- End card deck x 3 -->
 		</div>  <!-- End Section hair and beauty -->
