--- a/dirRath.html
+++ b/dirRath.html
@@ -621,7 +621,9 @@
 						<p class="card-text"><b>Avondale Sports And Leisure</b><br><i>(Athletic Shoes, Sports Clothing &#38; Equipment, Prize Cups &#38; Medals, Camping Accessories, School Uniforms)</i></p>
 						<p class="card-text">Main Street, Rathdrum, Co. Wicklow, A67 R592</p>
 						<p class="card-text"><a href="tel:+35340443250" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43250</p>
+						<p class="card-text"><a href="tel:+353872928660" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 292 8660</p>
 						<!-- <a href="https://www.facebook.com/profile.php?id=100057189980851&sk=about" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;  -->
+					  <p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
