--- a/infoRath.html
+++ b/infoRath.html
@@ -239,6 +239,7 @@
 						<p class="card-text"><b>Waste Collection & Recycling</b></p>
 						<p>Bord na Móna <a href="https://www.bnmrecycling.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>   
 						<p>Panda <a href="https://www.panda.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
+						<p>Information on what goes in your bin <a href="https://repak.ie/recycling#what-goes-in-my-bin" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
 					</div>
 				</div>
 	      <div class="card bg-dark text-white">
