--- a/commRath.html
+++ b/commRath.html
@@ -239,6 +239,19 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Young Onset Dementia Acitivity Club</b></p>
+						<p class="card-text">The Heather Room, St. Colman's Hospital, Ballinderry Road, Rathdrum, Co. Wicklow, A67 AK06 </p>
+						<p class="card-text">Every Tuesday morning, 10am to 12 noon</p>
+						<p class="card-text"><a href="tel:+353873182956" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob:  087 318 2956</p>
+						<p class="card-text"><a href="mailto:Michelle.bardon@alzheimer.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Michelle.bardon@alzheimer.ie</p>
+						<a href="https://alzheimer.ie/location/rathdrum-activity-club/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+			</div>  <!-- End card deck x 3 -->
+	  
+			<div class="card-deck" style="padding: 0.5rem;">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Citizens Information Centre</b></p>
 						<p class="card-text">73 Lower Main Street, Arklow, Co. Wicklow, Y14 TR88</p>
 						<p class="card-text"><a href="tel:+353818076750" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0818 07 6750</p>
@@ -247,9 +260,6 @@
 						<a href="https://centres.citizensinformation.ie/centre.php?cic=Virtual+CIC+in+Wicklow+Town+Library" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Virtual CIC in Wicklow Town Library
 					</div>
 				</div>
-			</div>  <!-- End card deck x 3 -->
-	  
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Wicklow Travellers Group</b></p>
@@ -267,6 +277,10 @@
 						<a href="https://www.adultliteracyforlife.ie/free-courses/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+
+			</div>  <!-- End card deck x 3    -->
+		
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Slimming World</b></p>
@@ -277,9 +291,6 @@
 						<a href="https://www.facebook.com/profile.php?id=100057348044069" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-			</div>  <!-- End card deck x 3    -->
-		
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Mental Health Supports and Services</b></p>
@@ -292,15 +303,15 @@
 						<a href="https://www.alcoholicsanonymous.ie/find-meeting/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+			</div>        <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Addiction Helplines and Information</b></p>
 						<a href="https://www.hse.ie/eng/services/list/5/addiction/drugshivhelpline/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-			</div>        <!-- End card deck x 3 -->
-			
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Respond Housing Association</b></p>
@@ -322,14 +333,15 @@
 						<a href="https://www.facebook.com/thirdagefailteisteach" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+
+			</div>        <!-- End card deck x 3 -->
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum and Ukraine Together</b></p>
 						<a href="https://www.facebook.com/profile.php?id=100090130844060#" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;  
 					</div>
 				</div>
-			</div>        <!-- End card deck x 3 -->
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Ukrainian Hub, Wicklow</b></p>
@@ -353,6 +365,10 @@
 						<a href="https://x.com/wicklowpship" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
+
+			</div> <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Local Enterprise Office Wicklow</b></p>
@@ -365,9 +381,6 @@
 						<a href="https://x.com/LEOWicklow" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
-			</div> <!-- End card deck x 3 -->
-			
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>County Wicklow Public Participation Network</b></p>
@@ -378,8 +391,6 @@
 						<a href="https://countywicklowppn.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/CWPPN/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 				<div class="card border-0">
 				</div>
