--- a/actRath.html
+++ b/actRath.html
@@ -530,10 +530,10 @@
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Lon Dubhs ( Avondale School Community Choir for Adults)</b></p>
-						<p class="card-text">Union Lane, Rathdrum, Co. Wicklow, A67 RR26</p>
-						<p class="card-text"><a href="tel:+35340446445" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46445</p>
-						<p class="card-text"><a href="mailto:AvondaleCC@kwetb.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: AvondaleCC@kwetb.ie</p>
+						<p class="card-text"><b>Lon Dubhs (Avondale Community College - Adult Community Choir)</b></p>
+						<p class="card-text">Union Lane, Rathdrum, Co. Wicklow, A67 RR26</p>					
+						<p class="card-text"><a href="tel:+353876079480" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 607 9480</p>
+						<p class="card-text"><a href="mailto:kathrynnoone@kwetb.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: kathrynnoone@kwetb.ie@kwetb.ie</p>
 						<a href="https://www.avondalecc.net/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/avondalecc" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
