--- a/dirRath.html
+++ b/dirRath.html
@@ -508,7 +508,7 @@
 						<p class="card-text"><b>Rathdrum Medical Practice</b></p>
 						<p class="card-text">Fair Green, Rathrum, Co. Wicklow, A67 TD53</p>
 						<p class="card-text"><a href="tel:+35340443436" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43436</p>
-						<p class="card-text"><a href="mailto:rathdrummedical2020@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrummedical2020@gmail.com</p>
+						<p class="card-text"><a href="mailto:info@rathdrummedical.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@rathdrummedical.ie</p>
 						<a href="http://www.rathdrummedical.ie" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
