--- a/newsRath.html
+++ b/newsRath.html
@@ -283,6 +283,23 @@
 						</div>
 					</div>
 					<div class="card bg-dark text-white">
+						<div class="card-body">		
+							<img class="card-img-top" src="images/2025_christmasIsland.jpg" alt="Christmasisland">				
+							<p class="card-text"><b>Christmas Island - The Santa Experience</b></p>
+							<p class="card-text">Saturday 22 November - Monday 22 December 2025</p>						
+							<p class="card-text">Hidden Valley Resort, Rathdrum, Co. Wicklow, A67 CX62</p>
+							<p class="card-text"><a href="tel:+3867272872" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 727 2872</p>
+							<p class="card-text"><a href="mailto:info@christmasisland.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@christmasisland.ie</p>
+							<a href="https://www.christmasisland.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.facebook.com/christmasislandcountywicklow/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.instagram.com/christmasislandexperience/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
+						</div>
+					</div>
+				</div>        <!-- End card deck x 3 -->	
+
+					
+				<div class="card-deck" style="padding: 0.5rem;">
+					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<!-- <img class="card-img-top" src="images/parishmarket.jpg" style="opacity: 0.2" alt="ParishMarket"> -->
 							<p class="card-text"><b>Rathdrum Parish Christmas Market</b></p>
@@ -293,13 +310,6 @@
 							<a href="https://www.facebook.com/rathdrumparish.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-									</div>        <!-- End card deck x 3 -->	
-
-					
-				<div class="card-deck" style="padding: 0.5rem;">
-
-
-
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_christmasLights.jpg" alt="ChristmasLights">
@@ -308,19 +318,6 @@
 							<a href="https://www.facebook.com/rathdrumchristmaslight" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-									<div class="card bg-dark text-white">
-					<div class="card-body">		
-						<img class="card-img-top" src="images/2025_christmasIsland.jpg" alt="Christmasisland">				
-						<p class="card-text"><b>Christmas Island - The Santa Experience</b></p>
-						<p class="card-text">Hidden Valley Resort, Rathdrum, Co. Wicklow, A67 CX62</p>
-						<p class="card-text"><a href="tel:+3867272872" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 727 2872</p>
-						<p class="card-text"><a href="mailto:info@christmasisland.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@christmasisland.ie</p>
-						<a href="https://www.christmasisland.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/christmasislandcountywicklow/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.instagram.com/christmasislandexperience/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
-					</div>
-				</div>
-
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_clissman_xmas.jpeg" alt="Clissman Santa">					
