--- a/dirRath.html
+++ b/dirRath.html
@@ -672,7 +672,7 @@
   
     <!-- Start Post & finance section -->
     <div class="container p-1 pt-2 bg-secondary text-dark text-center">
-      <h5>Stationery, Gifts, Toys, Party Supplies</h5>
+      <h5>Stationery, Gifts, Toys, Crafts, Party Supplies</h5>
     </div>
   
 		<div class="container">
@@ -720,17 +720,18 @@
 						<a href="https://www.instagram.com/the_rustichouse" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>	 
-				<div class="card bg-dark text-white">
-					<div class="card-body">
-						<p class="card-text"><b>Balloons 4 Fun</b></p>
-						<p class="card-text"><a href="tel:+353872894381" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 289 4381</p>
-						<a href="https://www.facebook.com/balloons4fun.ie/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp; 
-					</div>
-				</div>	 
-				<div class="card bg-dark text-white">
+ 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Prints N More</b></p>         
 						<a href="https://www.facebook.com/profile.php?id=61572789634583" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Vale Aromas</b></p>
+						<p class="card-text"><a href="tel:+353858769288" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 085 876 9288</p>
+						<a href="https://valearomas.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/valesaromas24" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;   
 					</div>
 				</div>
       </div>  <!-- End card deck x 3 -->
@@ -738,10 +739,11 @@
 	    <div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Vale Aromas</b></p>
-						<p class="card-text"><a href="tel:+353858769288" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 085 876 9288</p>
-						<a href="https://valearomas.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/valesaromas24" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;   
+						<p class="card-text"><b>Olannmor</b><br><i>(Weaving materials &#38; workshops )</i></p>
+						<p class="card-text"><a href="mailto:info@olannmor.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@olannmor.com</p>
+						<a href="https://www.olannmor.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/Olannmor/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/olannmor" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
