--- a/newsRath.html
+++ b/newsRath.html
@@ -312,12 +312,28 @@
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
+							<img class="card-img-top" src="images/2025_rugbyCraft.jpg" alt="RugbyCraft">
+							<p class="card-text"><b>Rathdrum Rugby Club - Festive Craft Evening</b></p>
+							<p class="card-text">Friday 28 Novemver 2025 from 7pm</p>
+							<p class="card-text">Rathdrum Rugby Football Club, The Ivy Leaf Grounds, Rathdrum, Co. Wicklow, A67 XO45</p>
+							<p class="card-text"><a href="mailto:rathdrumrugby@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumrugby@gmail.com</p>
+							<a href="https://www.rathdrumrfc.ie/products" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tickets&nbsp;&nbsp;
+							<a href="https://www.facebook.com/rathdrumrfc/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.instagram.com/rathdrumrugbyclub/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://x.com/RathdrumRFC" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
+						</div>
+					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
 							<img class="card-img-top" src="images/2025_christmasLights.jpg" alt="ChristmasLights">
 							<p class="card-text"><b>Rathdrum Christmas Lights - Official Switch On</b></p>
 							<p class="card-text">Saturday 29 November 2025, Parnell Memorial Park</p>
 							<a href="https://www.facebook.com/rathdrumchristmaslight" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->
+				
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_clissman_xmas.jpeg" alt="Clissman Santa">					
@@ -331,9 +347,6 @@
 							<a href="https://www.instagram.com/clissmann_horse_caravans/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
-				</div>        <!-- End card deck x 3 -->
-				
-				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 						  <img class="card-img-top" src="images/2026_hospice.jpg" alt="hospice">
@@ -342,8 +355,6 @@
 							<p class="card-text"><a href="tel:+353872928660" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 292 8660</p>
    					  <p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 						</div>
-					</div>
-					<div class="card border-0">
 					</div>
 					<div class="card border-0">
 					</div>
