--- a/todoRath.html
+++ b/todoRath.html
@@ -200,6 +200,32 @@
   
 		<!-- Next info section -->
 		<div class="container p-1 pt-2 bg-secondary text-dark text-center">
+			<h5>Workshops</h5>
+		</div> 	
+	
+		<div class="container">
+			<div class="card-deck" style="padding: 0.5rem;">
+					<div class="card bg-dark text-white">
+						<div class="card-body">
+							<p class="card-text"><b>Olannmor</b><br><i>(Weaving Workshops )</i></p>
+							<p class="card-text"><a href="mailto:info@olannmor.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@olannmor.com</p>
+							<a href="https://www.olannmor.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.facebook.com/Olannmor/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.instagram.com/olannmor" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>
+				<div class="card border-0">
+				</div>
+				<div class="card border-0">
+				</div>
+			</div>        <!-- End card deck x 3 -->
+		</div>  <!--end container -->
+		
+		<!--Spacer -->
+		<div class="container-fluid p-1 pt-2 bg-white text-white text-center"></div>
+  
+		<!-- Next info section -->
+		<div class="container p-1 pt-2 bg-secondary text-dark text-center">
 			<h5>Other</h5>
 		</div>    
   
