--- a/newsRath.html
+++ b/newsRath.html
@@ -200,8 +200,9 @@
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<p class="card-text"><b>Medical Hall - Tierney's Pharmacy Christmas Event</b></p>
-							<p class="card-text"><i>Date & time to be announced soon</i></p>
+							<img class="card-img-top" src="images/2025_tierneys.jpg" alt="TierneysEvent"> 
+							<p class="card-text"><b>Medical Hall - Tierney's Pharmacy Christmas Evening</b></p>
+							<p class="card-text">Thursday 6 November 2025, 6:30pm - 8:30pm</p>
 							<p class="card-text">31 Main St, Rathdrum, Co. Wicklow, A67 DH02</p>
 							<p class="card-text"><a href="tel:+35340446157" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46157</p>
 							<p class="card-text"><a href="mailto:tierneyspharmacy@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: tierneyspharmacy@gmail.com</p>
@@ -303,7 +304,7 @@
 						<div class="card-body">
 							<!-- <img class="card-img-top" src="images/parishmarket.jpg" style="opacity: 0.2" alt="ParishMarket"> -->
 							<p class="card-text"><b>Rathdrum Parish Christmas Market</b></p>
-							<p class="card-text">23 November 2025, 1pm - 4pm, RDA Hall</p>
+							<p class="card-text">Sunday 23 November 2025, 1pm - 4pm, RDA Hall</p>
 							<p class="card-text"><a href="tel:+35340443390" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43390</p>
 							<p class="card-text"><a href="mailto:rathdrumparish@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumparish@gmail.com</p>
 							<a href="http://rathdrumparish.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -541,7 +542,7 @@
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_harvest_festival.jpg" alt="VintageHarvestFeteDay">
 							<p class="card-text"><b>Vintage Harvest Fete Day</b></p>
-							<p class="card-text">5 October 2025</p>
+							<p class="card-text">Sunday 5 October 2025</p>
 						</div>
 					</div>
 					<div class="card bg-dark text-white">
