--- a/dirRath.html
+++ b/dirRath.html
@@ -834,16 +834,6 @@
 
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Nails by Rebecca</b></p>
-						<p class="card-text">11 Main Street, Rathdrum, Co. Wicklow, A67 Y582</p>
-						<a href="https://linktr.ee/nailsbyrebecca" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/nailsbyrebeccam" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.instagram.com/nailsbyrebecca__/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.tiktok.com/@nailsbyrebecca_" target="_blank"><i class="fa-brands fa-tiktok" style="color:#FFFFFF"></i></a>
-					</div>
-				</div>
-				<div class="card bg-dark text-white">
-					<div class="card-body">
 						<p class="card-text"><b>DS Enhanced Aesthetic</b></p>
 						<p class="card-text">26 Main Street, Rathdrum, Co. Wicklow, A67 F573</p>
 						<p class="card-text"><a href="tel:+353861711112" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 171 1112</p>
@@ -851,6 +841,8 @@
 						<a href="https://www.facebook.com/dsenhanced.aesthetic" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/dsenhancedaesthetic/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
+				</div>
+				<div class="card border-0">
 				</div>
 				<div class="card border-0">
 				</div>
