--- a/actRath.html
+++ b/actRath.html
@@ -457,6 +457,7 @@
 					<div class="card-body">
 						<p class="card-text"><b>ET Jivers</b></p>
 						<p class="card-text"><i>Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
+						<p>Fridays from 8pm to 9:30pm</p>
 						<a href="https://www.facebook.com/profile.php?id=61578780954954" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/et_jivers/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.tiktok.com/@et_jivers" target="_blank"><i class="fa-brands fa-tiktok" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -467,8 +468,17 @@
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Hoolie in the Hall - Line Dancing</b></p>
+						<p class="card-text"><i>Ballinaclash Community Hall, The Old School, Ballinacarrig Lower, Rathdrum, Co. Wicklow, A67 HY24</i></p>
+						<p>Tuesdays from 7:30pm to 9pm</p>
+						<p class="card-text"><a href="tel:+353851400504" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;WhatsApp:  087 334 49999</p>
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Craft Group</b></p>
 						<p class="card-text">Ballinacor Community Park, Carriglineen, Glenmalure, Co. Wicklow, A67 WY83</p>
+						<p>Tuesdays from 6pm to 9pm</p>
 						<p class="card-text"><a href="mailto:ballinacorcommunityproject@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: ballinacorcommunityproject@gmail.com</p>
 						<p class="card-text"><a href="mailto:ballinacorcpevents@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: ballinacorcpevents@gmail.com</p>
 						<a href="https://ballinacorcpevents.wixsite.com/ballinacorcommunity" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -485,8 +495,6 @@
 						<a href="https://wicklowlsp.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/activewicklow" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 			</div>        <!-- End card deck x 3 -->
     </div>  <!-- End Section -->
@@ -531,7 +539,8 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Lon Dubhs (Avondale Community College - Adult Community Choir)</b></p>
-						<p class="card-text">Union Lane, Rathdrum, Co. Wicklow, A67 RR26</p>					
+						<p class="card-text">Union Lane, Rathdrum, Co. Wicklow, A67 RR26</p>		
+						<p>Thursdays at 6:45pm</p>					
 						<p class="card-text"><a href="tel:+353876079480" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 607 9480</p>
 						<p class="card-text"><a href="mailto:kathrynnoone@kwetb.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: kathrynnoone@kwetb.ie@kwetb.ie</p>
 						<a href="https://www.avondalecc.net/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
